@startuml

title __PTM's Class Diagram__\n

  package uk.ac.ebi.pride.archive.dataprovider.data.ptm {
    class DefaultIdentifiedModification {
        - positionMap : Map<Integer, List<CvParamProvider>>
        - attributes : List<CvParamProvider>
        + DefaultIdentifiedModification()
        + DefaultIdentifiedModification()
        + DefaultIdentifiedModification()
        + DefaultIdentifiedModification()
        + getNeutralLoss()
        + getPositionMap()
        + getModificationCvTerm()
        + getAdditionalAttributesStrings()
    }
  }
  

  package uk.ac.ebi.pride.archive.dataprovider.data.ptm {
    interface GlobalModificationProvider {
        {abstract} + getMonoDeltaMass()
        {abstract} + getAveDeltaMass()
        {abstract} + getSpecificityCollection()
        {abstract} + getFormula()
        {abstract} + getShortName()
        {abstract} + isBiologicallyRelevant()
        {abstract} + getMainPosition()
    }
  }
  

  package uk.ac.ebi.pride.archive.dataprovider.data.ptm {
    interface IdentifiedModificationProvider {
        {abstract} + getNeutralLoss()
        {abstract} + getPositionMap()
        {abstract} + getModificationCvTerm()
    }
  }
  

  package uk.ac.ebi.pride.archive.dataprovider.data.ptm {
    interface ModificationProvider {
        {abstract} + getAccession()
    }
  }
  

  DefaultIdentifiedModification -up-|> IdentifiedModificationProvider
  DefaultIdentifiedModification o-- CvParamProvider : neutralLoss
  DefaultIdentifiedModification o-- CvParamProvider : modification


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
